--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="title">Drum Kit</h1>
+  <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    
     <button class="w drum">w</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
@@ -29,12 +27,13 @@
 <script src="index.js" charset="utf-8"></script>
 
 <footer id="footer">
-  <a class="btn" href="mailto:rpravin92@gmail.com"><i class="far fa-envelope size:5x" ></i> </a> 
+  <a class="btn" href="mailto:rpravin92@gmail.com"><i class="fas fa-envelope"  size:"7x" ></i> </a> 
   <a class="footer-link" href="https://www.linkedin.com/in/r-pravin-nair-04/"><i class="fab fa-linkedin-in"></i> </a> 
   <a class="footer-link" href="https://www.instagram.com/04braveheart/"><i class="fab fa-instagram"></i> </a> 
   <a class="footer-link" href="https://github.com/pravin44/cv"> <i class="fab fa-github"></i> </a><br>
   
   <p>© Copyright 2020 Pravin R Nair @ the Utopian Web</p>
+</footer>
 
 </body>
 </html>
